@@ -8,22 +8,22 @@ DEFAULTS={'PLOT': "all_scaled"}
 
 DATA_SETS = o([
     ('TCP upload BE',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_STREAM -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_STREAM", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP upload BE2',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_STREAM -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_STREAM", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP upload BE3',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_STREAM -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_STREAM", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP upload BE4',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_STREAM -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_STREAM", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
        'delay': DELAY,
        'units': 'Mbits/s',
        'runner': 'netperf_demo',}),
@@ -37,22 +37,22 @@ DATA_SETS = o([
        'runner': 'sum',}),
 
     ('TCP download BE',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_MAERTS -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_MAERTS", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP download BE2',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_MAERTS -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_MAERTS", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP download BE3',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_MAERTS -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_MAERTS", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
       'delay': DELAY,
       'units': 'Mbits/s',
       'runner': 'netperf_demo',}),
     ('TCP download BE4',
-     {'command': "%s -Y CS0,CS0 -H %s -t TCP_MAERTS -l %d -f m" % (GLOBAL_COMMAND, HOST, LENGTH),
+     {'command': find_netperf("TCP_MAERTS", "CS0,CS0", IP_VERSION, STEP_SIZE, LENGTH, HOST),
        'delay': DELAY,
        'units': 'Mbits/s',
        'runner': 'netperf_demo',}),
@@ -66,17 +66,17 @@ DATA_SETS = o([
        'runner': 'sum',}),
 
     ('Ping (ms) UDP BE1',
-     {'command': "%s -Y CS0,CS0 -H %s -t UDP_RR -l %d" % (GLOBAL_COMMAND, HOST, TOTAL_LENGTH),
+     {'command': find_netperf("UDP_RR", "CS0,CS0", IP_VERSION, STEP_SIZE, TOTAL_LENGTH, HOST),
       'data_transform': 'rr_to_ms',
       'units': 'ms',
       'runner': 'netperf_demo',}),
     ('Ping (ms) UDP BE2',
-     {'command': "%s -Y CS0,CS0 -H %s -t UDP_RR -l %d" % (GLOBAL_COMMAND, HOST, TOTAL_LENGTH),
+     {'command': find_netperf("UDP_RR", "CS0,CS0", IP_VERSION, STEP_SIZE, TOTAL_LENGTH, HOST),
       'data_transform': 'rr_to_ms',
       'units': 'ms',
       'runner': 'netperf_demo',}),
     ('Ping (ms) UDP BE3',
-     {'command': "%s -Y CS0,CS0 -H %s -t UDP_RR -l %d" % (GLOBAL_COMMAND, HOST, TOTAL_LENGTH),
+     {'command': find_netperf("UDP_RR", "CS0,CS0", IP_VERSION, STEP_SIZE, TOTAL_LENGTH, HOST),
       'data_transform': 'rr_to_ms',
       'units': 'ms',
       'runner': 'netperf_demo',}),
